change capital of hexadecimal

--- a/project.html
+++ b/project.html
@@ -94,7 +94,7 @@
       class="Hexadecimal"
       style="left: 785px; top: 478px; position: absolute; color: #d0d0d0; font-size: 25px; font-family: Inter; font-weight: 500; letter-spacing: 2.5px; word-wrap: break-word"
     >
-      hexadecimal
+      Hexadecimal
     </div>
   </body>
 </html>
