--- a/project.html
+++ b/project.html
@@ -25,6 +25,7 @@
   <body
     style="background-color: #192655; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0"
   >
+    <p >halo keubah ga ya</p>
     <div class="Rectangle5"></div>
     <div class="Rectangle6"></div>
     <div class="Rectangle4"></div>
