Menghapus nama Muhammad pada nama Rifki

--- a/aboutus.html
+++ b/aboutus.html
@@ -101,7 +101,7 @@
               <div class="col-md-4 mb-3">
                   <div class="card text-center text-light justify-content-center" style="background-color: #05204a;">
                     <img src="image/rifki.png" alt="Raihan Ghani" width="200" class="rounded-circle img-thumbnail mt-5" style="margin: auto;" />
-                    <h4 class="mt-5">Muhammad Rifki Alaudin</h4>
+                    <h4 class="mt-5">Rifki Alaudin</h4>
                     <p class="mb-5">ig : al_rifki8<br>rifkialaudin5@gmail.com</p>
                </div>
           </div>
